--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@ que son de mucha importancia para el desarrollo personal. </h2>
 
 <h1> Valores que engrandecen a una persona  </h1>
 
-<h2> A continuacion te presento un menú donde puedes consultar los valores que consideré más importantes para este tema, después de consultar todos te invito a contestar un pequeño cuestinario!
+<h2> aqui dice pura chingadera JAJAJAJAJ no le hagan caso, reakmente hace falta añadir un workspace diferente al que ya tiene github? porque a primera vista se ve comodo editar el codigo desde aqui mismo pero los tutoriales te agregan otro workspace.
 
+</h2>
 
 </center>
 
