--- a/index.html
+++ b/index.html
@@ -2,18 +2,50 @@
 <html>
 <head>
     <meta charset="utf-8">
-    THIS IS A TITLE OF ALL TIME
+ <title>  THIS IS A TITLE OF ALL TIME </title>
+
+ <style type="text/css"> 
+
+body {
+    margin: 0;
+	padding: 0;
+	/* background-image: url('img/indexfondo.png'); */
+	background-size: cover;
+	background-position: center;
+	background-color: dodgerblue;
+
+
+}
+
+.footer p {
+     font:cursive;
+         
+    background-color: dodgerblue;
+         }
+
+
+
+ </style>
 </head>
 
 
 <body>
-<h1>
-    THIS IS ANOTHER TITLE OF ALL TIME ASTROPHYSICS ASJDAHDLASDJKFH
-</h1>
-<p> NO LES PASA QUE NO SABES NI QUE ESTAS HALGO </p>
 
-<p> I JUST ADDED NEW STUFF BUT IDK HOW IT WORKS TO MAKE IT SHOW UP SMWEHERE ELSE</p>
+<center> <h1> CIENCIA EN NUESTRA MENTE <br> ASTROFISICA </h1> </center>
+<h2> En nombre de la ciencia </h2>
+<p> DISEÑAR DISEÑO DISEÑOSO DE COMO SE DISEÑARA LA PAGINA </p>
+
 </body>
+
+
+
+
 <p> NO XD </p>
+
+<div class = "footer"> 
+    <center> <img src= "res/cecy.png" height = "100px" width = "100px"> </center>
+	
+</div>
+
 
 </html>
