--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body {
 
 <center> <h1> CIENCIA EN NUESTRA MENTE <br> ASTROFISICA </h1> </center>
 <h2> En nombre de la ciencia </h2>
-<p> DISEÑAR DISEÑO DISEÑOSO DE COMO SE DISEÑARA LA PAGINA </p>
+<p> DISEÑAR DISEÑO DISEÑOSO DE COMO SE DISEÑARA LA PAGINA xd </p>
 
 </body>
 
