--- a/index.html
+++ b/index.html
@@ -2,48 +2,99 @@
 <html>
 <head>
     <meta charset="utf-8">
- <title>  THIS IS A TITLE OF ALL TIME </title>
-
- <style type="text/css"> 
-
-body {
-    margin: 0;
-	padding: 0;
-	/* background-image: url('img/indexfondo.png'); */
-	background-size: cover;
-	background-position: center;
-	background-color: dodgerblue;
-
-
-}
-
-.footer p {
-     font:cursive;
-         
-    background-color: dodgerblue;
-         }
+ <title> AstrofisicaCecytem </title>
 
 
 
- </style>
+ <link rel="stylesheet" type="text/css" href= "stylemain.css">
+
+
+
+
+<div class = "logofix">
+
+<a href = "https://anothermob.github.io/astrophysics12/"> 
+<img src = "res/mainlogo.png" height = "80px" width = "80px"> </a>
+
+
+</div> 
+
+<div class = "menufix" > 
+
+<div class = "menu"> 
+    <ul id= "css">
+
+<li> <a href = "#"> Inicio </a> </li> 
+<li> <a href = "#"> placeholder </a> </li> 
+<li> <a href = "#"> placeholder </a> </li> 
+<li> <a href = "#"> placeholder </a> </li> 
+<li> <a href = "#"> placeholder </a> </li> 
+
+</ul> 
+    
+</div>
+
+
+ </div> </ul> 
+
+<br> <br> <br> <br>
+<div class = "title">
+<hr size=10 color ="white">
+
+
+
+<center> <h2> CIENCIA EN NUESTRA MENTE </h2> <br> <h1> ASTROFISICA </h1> </center>
+
+<hr size=10 color ="white">
+
+</div> 
+
+
 </head>
 
 
 <body>
 
-<center> <h1> CIENCIA EN NUESTRA MENTE <br> ASTROFISICA </h1> </center>
+
+
+
 <h2> En nombre de la ciencia </h2>
-<p> DISEÑAR DISEÑO DISEÑOSO DE COMO SE DISEÑARA LA PAGINA xd </p>
+<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. <br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad
+aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
+aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
+aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
+aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
+aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
+aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
+aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
+aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
+aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
+aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
+</p>
+
 
 </body>
 
 
 
 
-<p> NO XD </p>
 
-<div class = "footer"> 
-    <center> <img src= "res/cecy.png" height = "100px" width = "100px"> </center>
+<hr size=10 color ="white">
+
+<div class = "footer">
+ 
+<h2> Siguenos en nuestras redes sociales: </h2>
+
+<div class = "SocialMedia"> 
+<a href = "https://www.facebook.com/profile.php?id=100044057575966&rdid=SJRuYOXMjFwPspqI&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1ASsHtgcJ2%2" </a>
+<img src = "res/fb.png" height = "100px" width = "100px"> </a>
+
+<a href="https://www.youtube.com/@aprendiendo3211" </a>
+<img src = "res/yt.png" height = "100px" width = "130px"> </a>
+</div> 
+
+ <center> <p> Página creada por Victor Hugo </p>
+    <img src = "res/cecy.png" height = "100px" width = "120px"> </center>
 	
 </div>
 
