--- a/index.html
+++ b/index.html
@@ -55,22 +55,54 @@
 
 <body>
 
-
-
-
+<center>
+<div class = "subtitle" > 
 <h2> En nombre de la ciencia </h2>
-<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. <br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad
-aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
-aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
-aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
-aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
-aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
-aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
-aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
-aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
-aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
-aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad 
-</p>
+<h3> Un lugar para compartir y contemplar trabajos e investigaciones sobre la Astrofisica. </h3>
+
+</div> 
+
+<section class="reviews container">
+		
+	<h2> PLACEHOLDER <br> <font color="red" > PLACEHOLDERDOS </font> </h2>
+	<div class="reviews-content">
+			
+			<div class="reviews-1">
+				<img src="res/mainlogo.png">
+				<h3> PLACE </h3> 
+				<p> ABCEDFGHIJKLMNOPQRSTUVWXYZ <p>
+			</div>
+
+			<div class="reviews-1">
+				<img src="res/mainlogo.png">
+				<h3> PERSONA N4   </h3> 
+				<p> REVIVAL	<br> a <br> a <br> as <br> a <br> a <br> a <br> as <br> a <br> a <br> a <br> as <br> </p>
+			</div>
+
+                        <div class="reviews-1">
+				<img src="res/mainlogo.png">
+				<h3> PERSONA N4   </h3> 
+				<p> REVIVAL	</p>
+			</div>
+
+                        <div class="reviews-1">
+				<img src="res/mainlogo.png">
+				<h3> PERSONA N4   </h3> 
+				<p> REVIVAL	</p>
+			</div>
+
+
+
+
+		</div>
+	</section>
+
+
+
+
+
+
+
 
 
 </body>
@@ -94,7 +126,9 @@ aaa<br> aaa<br> aaa<br> aa<br> aaaa<br> aaa<br> aad
 </div> 
 
  <center> <p> Página creada por Victor Hugo </p>
-    <img src = "res/cecy.png" height = "100px" width = "120px"> </center>
+    <img src = "res/cecy.png" height = "100px" width = "120px">
+<h3> ¡Rumbo a la excelencia! </h3>
+ </center>
 	
 </div>
 
