--- a/index.html
+++ b/index.html
@@ -64,35 +64,36 @@
 
 <section class="reviews container">
 		
-	<h2> PLACEHOLDER <br> <font color="red" > PLACEHOLDERDOS </font> </h2>
-	<div class="reviews-content">
+		<div class="reviews-content">
 			
 			<div class="reviews-1">
-				<img src="res/mainlogo.png">
-				<h3> PLACE </h3> 
+				<img src="res/newton.png">
+				<h3> Sir Isaac Newton </h3> 
 				<p> ABCEDFGHIJKLMNOPQRSTUVWXYZ <p>
 			</div>
 
 			<div class="reviews-1">
-				<img src="res/mainlogo.png">
-				<h3> PERSONA N4   </h3> 
+				<img src="res/eins.png">
+				<h3> Albert Einstein   </h3> 
 				<p> REVIVAL	<br> a <br> a <br> as <br> a <br> a <br> a <br> as <br> a <br> a <br> a <br> as <br> </p>
 			</div>
 
                         <div class="reviews-1">
-				<img src="res/mainlogo.png">
-				<h3> PERSONA N4   </h3> 
+				<img src="res/fermi.png">
+				<h3> Enrico Fermi   </h3> 
 				<p> REVIVAL	</p>
 			</div>
 
                         <div class="reviews-1">
-				<img src="res/mainlogo.png">
-				<h3> PERSONA N4   </h3> 
+				<img src="res/hawk.png">
+				<h3> Stephen Hawking   </h3> 
 				<p> REVIVAL	</p>
 			</div>
 
 
-
+<!-- TRATAR DE AGREGAR UN MENU DESPLEGABLE CON LAS APORTACIONES MAS GRANDES A LA ASTROFISICA DE ESTOS CIENTIFICOS, PONER COMO UNA ANIMACION
+DONDE PRIMERO APAREZCA O SU FOTO O SU NOMBRE EN GRANDE, Y CUANDO HAGAS HOVER O LE PIQUES AL MENU DESPLEGABLE DE TEXTO, EL NOMBRE SE HAGA CHIQUITO O 
+PARA ARRIBA DEJANDO LUGAR PARA EL TEXTO DE SUS APORTACIONES QUEDARIA PADRE ESO COMO NO --> 
 
 		</div>
 	</section>
