--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <li> <a href = "#"> placeholder </a> </li> 
 <li> <a href = "#"> placeholder </a> </li> 
 <li> <a href = "#"> placeholder </a> </li> 
-<li> <a href = "#"> placeholder </a> </li> 
+<li> <a href = "https://sites.google.com/cecyte.edu.mx/ciencia-en-mi-mente/p%C3%A1gina-principal"> Página original </a> </li> 
 
 </ul> 
     
@@ -62,6 +62,7 @@
 
 </div> 
 
+<h2> Temas más recientes: </h2>
 <section class="reviews container">
 		
 		<div class="reviews-content">
@@ -93,7 +94,8 @@
 
 <!-- TRATAR DE AGREGAR UN MENU DESPLEGABLE CON LAS APORTACIONES MAS GRANDES A LA ASTROFISICA DE ESTOS CIENTIFICOS, PONER COMO UNA ANIMACION
 DONDE PRIMERO APAREZCA O SU FOTO O SU NOMBRE EN GRANDE, Y CUANDO HAGAS HOVER O LE PIQUES AL MENU DESPLEGABLE DE TEXTO, EL NOMBRE SE HAGA CHIQUITO O 
-PARA ARRIBA DEJANDO LUGAR PARA EL TEXTO DE SUS APORTACIONES QUEDARIA PADRE ESO COMO NO --> 
+PARA ARRIBA DEJANDO LUGAR PARA EL TEXTO DE SUS APORTACIONES QUEDARIA PADRE ESO COMO NO-------- UPDATE: DESCARTA ESO, MEJOR UN SLIDER DONDE SIMPLEMENTE SE
+PONGAN ARTICULOS O INVESTIGACIONES MAS RECIENTES -->
 
 		</div>
 	</section>
