--- a/articlesfrontpage/articid1.html
+++ b/articlesfrontpage/articid1.html
@@ -6,7 +6,7 @@
 
 
 
- <link rel="stylesheet" type="text/css" href= "stylemain.css">
+ <link rel="stylesheet" type="text/css" href = "estilos/articstyle.css">
 
 
 
@@ -62,49 +62,16 @@
 
 </div> 
 
-<h2> <font color= "green" >   Temas más recientes </h2> 
-<section class="reviews container">
-		
-		<div class="reviews-content">
-			
-  <a href = "articlesfrontpage/articid1.html">
+<h2> <font color= "green" > WORK IN PROGRESS </h2> 
 
-                        <div class="reviews-1">
-                                	<img src="res/hawk.png">
-			 <h3> Aportaciones grandes, cientificos grandes.   </h3>
-				<p> Descubre este artículo donde hablamos sobre las aportaciones más grandes a la Astrofisica que han hecho los fisicos más renombrados de la historia.	</p>
-                                   </a>
-</div>
-
-<!--TODO ESTO ESTA DESACTIVADO, ES CODIGO PARA METER MAS SLIDERS DE ARTICULOS NOTICIAS ETC 
-			 <div class="reviews-1">
-				<img src="#">
-				<h3> TBA </h3> 
-				<p> TBA <p>
-			</div>
-
-			<div class="reviews-1">
-				<img src="#">
-				<h3>  TBA   </h3> 
-				<p> TBA	</p>
-			</div> 
- 
-                        <div class="reviews-1">
-				<img src="res/eins.png">
-				<h3>   TBA  </h3> 
-				<p> TBA	</p>
-		</div> --> 
-
-
-
+<img src ="res/bert.png" height="100px" width= "100px" > 
 
 
 <!-- TRATAR DE AGREGAR UN MENU DESPLEGABLE CON LAS APORTACIONES MAS GRANDES A LA ASTROFISICA DE ESTOS CIENTIFICOS, PONER COMO UNA ANIMACION
 DONDE PRIMERO APAREZCA O SU FOTO O SU NOMBRE EN GRANDE, Y CUANDO HAGAS HOVER O LE PIQUES AL MENU DESPLEGABLE DE TEXTO, EL NOMBRE SE HAGA CHIQUITO O 
 PARA ARRIBA DEJANDO LUGAR PARA EL TEXTO DE SUS APORTACIONES QUEDARIA PADRE ESO COMO NO --> 
 
-		</div>
-	</section>
+	
 
 
 
