--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
  <title> AstrofisicaCecytem </title>
 
 
@@ -24,7 +27,7 @@
 <div class = "menu"> 
     <ul id= "css">
 
-<li> <a href = "#"> Inicio </a> </li> 
+<li> <a href = "index.html"> Inicio </a> </li> 
 <li> <a href = "#"> placeholder </a> </li> 
 <li> <a href = "#"> placeholder </a> </li> 
 <li> <a href = "#"> placeholder </a> </li> 
@@ -37,13 +40,13 @@
 
  </div> </ul> 
 
-<br> <br> <br> <br>
+<br> <br> <br> <br> <br> <!--Saltos de linea para que el menu fijado no tape la linea blanca hr del titulo -->
 <div class = "title">
 <hr size=10 color ="white">
 
 
 
-<center> <h2> CLUB: CIENCIA EN MI MENTE </h2> <br> <h1> ASTROFISICA </h1> </center>
+<center> <h2> CLUB: CIENCIA EN MI MENTE </h2>  <h1> ASTROFISICA </h1> </center>
 
 <hr size=10 color ="white">
 
@@ -56,16 +59,29 @@
 <body>
 
 <center>
+
 <div class = "subtitle" > 
 <h2> En nombre de la ciencia </h2>
+
+
 <h3> Un lugar para compartir y contemplar trabajos e investigaciones sobre la Astrofisica. </h3>
+
 
 </div> 
 
 <h2> <font color= "green" >   Temas más recientes </h2> 
+<p> Mantente al tanto para ver cuando se publiquen nuevos artículos... </p>
+
+
+
+
+<hr size = 10 color = "white">
+
 <section class="reviews container">
+
 		
 		<div class="reviews-content">
+
 			
   <a href = "articlesfrontpage/articid1.html">
 
@@ -74,16 +90,29 @@
 			 <h3> Aportaciones grandes, cientificos grandes.   </h3>
 				<p> Descubre este artículo donde hablamos sobre las aportaciones más grandes a la Astrofisica que han hecho los fisicos más renombrados de la historia.	</p>
                                    </a>
-</div>
 
-<!--TODO ESTO ESTA DESACTIVADO, ES CODIGO PARA METER MAS SLIDERS DE ARTICULOS NOTICIAS ETC 
-			 <div class="reviews-1">
-				<img src="#">
-				<h3> TBA </h3> 
-				<p> TBA <p>
+
+                          </div>
+
+                          <div class="reviews-1">
+				<img src="res/dyson.png">
+				<h3> Esfera de Dyson </h3> 
+				<p> Que es una esfera de dyson? es posible recrear algo así? descubrelo en esta presentacion de PowerPoint. <p>
 			</div>
 
-			<div class="reviews-1">
+
+
+
+	</div>
+
+	</section>
+<hr size = 10 color = "white">
+
+
+<!-- AÑADIR ALGUNA SIMBOLOGIA O TEXTO QUE INDIQUE QUE TIPO DE ARTICULO ES, SI PRESENTACION EN POWERPOINT, OTRA PAGINA, GOOGLE DOCS...ETC -->
+
+<!--TODO ESTO ESTA DESACTIVADO, ES CODIGO PARA METER MAS SLIDERS DE ARTICULOS NOTICIAS ETC 
+						<div class="reviews-1">
 				<img src="#">
 				<h3>  TBA   </h3> 
 				<p> TBA	</p>
@@ -103,8 +132,7 @@
 DONDE PRIMERO APAREZCA O SU FOTO O SU NOMBRE EN GRANDE, Y CUANDO HAGAS HOVER O LE PIQUES AL MENU DESPLEGABLE DE TEXTO, EL NOMBRE SE HAGA CHIQUITO O 
 PARA ARRIBA DEJANDO LUGAR PARA EL TEXTO DE SUS APORTACIONES QUEDARIA PADRE ESO COMO NO --> 
 
-		</div>
-	</section>
+	
 
 
 
@@ -120,7 +148,7 @@ PARA ARRIBA DEJANDO LUGAR PARA EL TEXTO DE SUS APORTACIONES QUEDARIA PADRE ESO C
 
 
 
-<hr size=10 color ="white">
+
 
 <div class = "footer">
  
@@ -135,10 +163,24 @@ PARA ARRIBA DEJANDO LUGAR PARA EL TEXTO DE SUS APORTACIONES QUEDARIA PADRE ESO C
 </div> 
 
  <center> <p> Página creada por Victor Hugo y Marco Daniel Alvarado Sandoval</p>
-    <img src = "res/cecy.png" height = "100px" width = "120px">
-<h3> ¡Rumbo a la excelencia! </h3>
+
+
+
+<div class = "bgfooter">
+    <img src = "res/astrocecy.png" height = "110px" width = "120px">
+<h3> ¡Rumbo a la excelencia! </h3> 
+
+
+
+<br> <br> <br>
+<br> <br> <br>
+<br> <br> <br>
+<br> <br> <br>
+<br> <br> <br>
+
+
  </center>
-	
+	</div>
 </div>
 
 
