--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
  </div> </ul> 
 
 <br> <br> <br> <br> <br> <!--Saltos de linea para que el menu fijado no tape la linea blanca hr del titulo -->
+
+
+
+<div class = "bgeffect">
+
 <div class = "title">
 <hr size=10 color ="white">
 
@@ -52,6 +57,7 @@
 
 </div> 
 
+</div> 
 
 </head>
 
@@ -76,6 +82,8 @@
 
 
 <hr size = 10 color = "white">
+
+<div class = "bgeffect">
 
 <section class="reviews container">
 
@@ -106,6 +114,8 @@
 	</div>
 
 	</section>
+</div>
+
 <hr size = 10 color = "white">
 
 
@@ -162,11 +172,12 @@ PARA ARRIBA DEJANDO LUGAR PARA EL TEXTO DE SUS APORTACIONES QUEDARIA PADRE ESO C
 <img src = "res/yt.png" height = "100px" width = "130px"> </a>
 </div> 
 
- <center> <p> Página creada por Victor Hugo y Marco Daniel Alvarado Sandoval</p>
+ <center> <p> Página creada por Victor Hugo y Marco Daniel </p>
 
 
 
-<div class = "bgfooter">
+<div class = "bgeffect">
+
     <img src = "res/astrocecy.png" height = "110px" width = "120px">
 <h3> ¡Rumbo a la excelencia! </h3> 
 
@@ -180,8 +191,7 @@ PARA ARRIBA DEJANDO LUGAR PARA EL TEXTO DE SUS APORTACIONES QUEDARIA PADRE ESO C
 
 
  </center>
-	</div>
+	
 </div>
-
-
+</div> 
 </html>
