--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 
-<div class = "logofix">
+<!-- <div class = "logofix">
 
 <a href = "https://anothermob.github.io/astrophysics12/"> 
 <img src = "res/mainlogo.png" height = "80px" width = "80px"> </a>
@@ -22,23 +22,31 @@
 
 </div> 
 
-<div class = "menufix" > 
+-->
+
+<input type= "checkbox" id = "menu-toggle">
+<label for = "menu-toggle" class = "toggle-label">  < </label>
+
 
 <div class = "menu"> 
-    <ul id= "css">
+    <ul id = "css">
 
-<li> <a href = "index.html"> Inicio </a> </li> 
+<li> <a href = "https://anothermob.github.io/astrophysics12/"> Inicio </a> </li> 
 <li> <a href = "#"> placeholder </a> </li> 
 <li> <a href = "#"> placeholder </a> </li> 
 <li> <a href = "#"> placeholder </a> </li> 
 <li> <a href = "https://sites.google.com/cecyte.edu.mx/ciencia-en-mi-mente/p%C3%A1gina-principal"> Página original </a> </li> 
+
+
+
+
 
 </ul> 
     
 </div>
 
 
- </div> </ul> 
+ </ul> 
 
 <br> <br> <br> <br> <br> <!--Saltos de linea para que el menu fijado no tape la linea blanca hr del titulo -->
 
@@ -47,7 +55,7 @@
 <div class = "bgeffect">
 
 <div class = "title">
-<hr size=10 color ="white">
+<hr size = 10 color ="white">
 
 
 
