--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                           </div>
 
                           <div class="reviews-1">
-							<a href = "https://drive.google.com/drive/u/5/folders/1ENaX3wRb81om_oPB1hMGciNCPoVLzKvf"></a>
+							<a href = "https://drive.google.com/drive/u/5/folders/1ENaX3wRb81om_oPB1hMGciNCPoVLzKvf"> 
 				<img src="res/dyson.png">
 				<h3> Esfera de Dyson </h3> 
 				<p> Que es una esfera de dyson? es posible recrear algo así? descubrelo en esta presentacion de PowerPoint. </p>
