--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 -->
 
 <input type= "checkbox" id = "menu-toggle">
-<label for = "menu-toggle" class = "toggle-label">   </label>
-
+<label for = "menu-toggle" class = "toggle-label">  < </label>
 
 <div class = "menu"> 
     <ul id = "css">
@@ -110,14 +109,15 @@
 
                           </div>
 
+
                           <div class="reviews-1">
-							<a href = "https://drive.google.com/drive/u/5/folders/1ENaX3wRb81om_oPB1hMGciNCPoVLzKvf"> 
+<a href = "https://drive.google.com/drive/u/5/folders/1ENaX3wRb81om_oPB1hMGciNCPoVLzKvf">
 				<img src="res/dyson.png">
 				<h3> Esfera de Dyson </h3> 
 				<p> Que es una esfera de dyson? es posible recrear algo así? descubrelo en esta presentacion de PowerPoint. </p>
-				</a>
-			</div>
+</a>
 
+			</div>
 
 
 
