big update wow like fortnite

--- a/articlesfrontpage/articid1.html
+++ b/articlesfrontpage/articid1.html
@@ -2,111 +2,165 @@
 <html>
 <head>
     <meta charset="utf-8">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
  <title> AstrofisicaCecytem </title>
 
 
 
- <link rel="stylesheet" type="text/css" href = "estilos/articstyle.css">
+ <link rel="stylesheet" type="text/css" href= "articstyle.css">
 
 
 
 
-<div class = "logofix">
-
-<a href = "https://anothermob.github.io/astrophysics12/"> 
-<img src = "res/mainlogo.png" height = "80px" width = "80px"> </a>
 
 
-</div> 
-
-<div class = "menufix" > 
+<input type= "checkbox" id = "menu-toggle">
+<label for = "menu-toggle" class = "toggle-label">  < </label>
 
 <div class = "menu"> 
-    <ul id= "css">
+    <ul id = "css">
 
-<li> <a href = "#"> Inicio </a> </li> 
+<li> <a href = "https://anothermob.github.io/astrophysics12/"> Inicio </a> </li> 
+
+<!--
+
 <li> <a href = "#"> placeholder </a> </li> 
 <li> <a href = "#"> placeholder </a> </li> 
 <li> <a href = "#"> placeholder </a> </li> 
+--> 
+
 <li> <a href = "https://sites.google.com/cecyte.edu.mx/ciencia-en-mi-mente/p%C3%A1gina-principal"> Página original </a> </li> 
+
+
+
+
 
 </ul> 
     
 </div>
 
 
- </div> </ul> 
+ </ul> 
 
-<br> <br> <br> <br>
+<br> <br> <br> <br> <br> <!--Saltos de linea para que el menu fijado no tape la linea blanca hr del titulo -->
+
+
+
+
+
 <div class = "title">
-<hr size=10 color ="white">
+<hr size = 10 color ="white">
 
-
-
-<center> <h2> CLUB: CIENCIA EN MI MENTE </h2> <br> <h1> ASTROFISICA </h1> </center>
+ <h1> Aportaciones Grandes, Cientificos Grandes </h1>
 
 <hr size=10 color ="white">
+
 
 </div> 
-
 
 </head>
 
 
 <body>
 
-<center>
+
+
 <div class = "subtitle" > 
-<h2> En nombre de la ciencia </h2>
-<h3> Un lugar para compartir y contemplar trabajos e investigaciones sobre la Astrofisica. </h3>
+
+<h2> Desde Isaac Newton, hasta Neil deGrasse Tyson, descubramos las aportaciones más grandes de la historia hechas por Astrofisicos </h2>
 
 </div> 
 
-<h2> <font color= "green" > WORK IN PROGRESS </h2> 
 
-<img src ="res/bert.png" height="100px" width= "100px" > 
+<hr size = 10 color = "white">
+
+<div class = "content">
+
+<h3> Leyes de Kepler - Johannes Kepler </h3> 
+
+<img src = "res/kepler1.png" height = 300px width = 600px >
+<p> Empezamos con uno de los padres de la Astronomia, Kepler, el cuál estableció una serie de leyes las cuales resultaron fundamentales para el entendimiento del espacio y el comportamiento de los planetas,
+como los de nuestro sistema solar.
+ 
+<br> <br> 1.- Ley de las órbitas <br> La orbita de los planetas no es circular, es en forma de elipse, ubicando al Sol como uno de los focos de la elipse 
+
+<br> <br> 2.- Ley de las areas <br> 
+La velocidad a la que un planeta orbita al Sol no es linear, es decir, mientras mas cercas se encuente el planeta del Sol, más rapida será su velocidad, provocando que la area recorrida sea igual en el mismo tiempo
+en dos areas especificas de la trayectoria de un planeta; el perihelio: el punto más cercano al Sol, velocidad máxima. El afelio: punto más lejano entre un planeta y el Sol, velocidad minima. 
+
+<br> <br> 3.- Ley de los períodos <br>
+Esta ley nos habla de la proporcionalidad entre el cuadrado de un período orbital (el tiempo que demora un planeta en dar la vuelta al Sol) y el cubo del radio de la órbita. Si dividimos el cuadrado del tiempo orbital entre el cubo del radio de la órbita, tendremos como resultado una constante, llamada constante de Kepler. La constante de Kepler es igual para todos los cuerpos celestes que orbitan alrededor del Sol, ya que no depende de ellos sino de la masa solar.  </p> 
 
 
-<!-- TRATAR DE AGREGAR UN MENU DESPLEGABLE CON LAS APORTACIONES MAS GRANDES A LA ASTROFISICA DE ESTOS CIENTIFICOS, PONER COMO UNA ANIMACION
-DONDE PRIMERO APAREZCA O SU FOTO O SU NOMBRE EN GRANDE, Y CUANDO HAGAS HOVER O LE PIQUES AL MENU DESPLEGABLE DE TEXTO, EL NOMBRE SE HAGA CHIQUITO O 
-PARA ARRIBA DEJANDO LUGAR PARA EL TEXTO DE SUS APORTACIONES QUEDARIA PADRE ESO COMO NO --> 
-
-	
+<hr size = 10 color = "white">
 
 
+<!--
+<h3> Ley de gravitación universal - Isaac Newton </h3> 
+
+<p>  no ele spasa que no eieien ext oed  placehor pero de cuando de ede deisisss jajaja ano pa asuq we asdhsadfljkshdf f hfeufhwe fsd fd faobre trodo cunado rtwear sadf itnentat sesdreibir altgo choerente poero no ia 
+no ele spasa que no eieien ext oed  placehor pero de cuando de ede deisisss jajaja ano pa asuq we asdhsadfljkshdf f hfeufhwe fsd fd faobre trodo cunado rtwear sadf itnentat sesdreibir altgo choerente poero no ia
+no ele spasa que no eieien ext oed  placehor pero de cuando de ede deisisss jajaja ano pa asuq we asdhsadfljkshdf f hfeufhwe fsd fd faobre trodo cunado rtwear sadf itnentat sesdreibir altgo choerente poero no ia   </p> 
+
+-->
 
 
 
-
-
-
+</div> 
 
 </body>
 
 
+<br> <br> <br>
+<br> <br> <br>
+<br> <br> <br>
+<br> <br> <br>
+<br> <br> <br>
 
 
 
-<hr size=10 color ="white">
-
-<div class = "footer">
- 
-<h2> Siguenos en nuestras redes sociales: </h2>
+<div class = "footer"> 
 
 <div class = "SocialMedia"> 
-<a href = "https://www.facebook.com/profile.php?id=100044057575966&rdid=SJRuYOXMjFwPspqI&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1ASsHtgcJ2%2" </a>
-<img src = "res/fb.png" height = "100px" width = "100px"> </a>
+<center> 
+<h2> Siguenos en nuestras redes sociales: </h2>
+<h2> Facebook <br> <img src = "res/fb.png" height = "100px" width = "100px"> </a> </h2>
 
-<a href="https://www.youtube.com/@aprendiendo3211" </a>
-<img src = "res/yt.png" height = "100px" width = "130px"> </a>
+
+<a href =  "https://www.facebook.com/profile.php?id=100044057575966&rdid=SJRuYOXMjFwPspqI&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1ASsHtgcJ2%2"> Programanía </a> 
+
+<a href =  "https://www.facebook.com/profile.php?id=61568065962047"> Programanía Cecyte 12 Morelia </a>
+
+ <br>
+
+<h2> Youtube <br> <img src = "res/yt.png" height = "100px" width = "130px">  </a> </h2>
+<a href="https://www.youtube.com/@aprendiendo3211"> Aprendiendo </a>
+
+</center>
 </div> 
 
- <center> <p> Página creada por Victor Hugo y Marco Daniel Alvarado Sandoval</p>
-    <img src = "res/cecy.png" height = "100px" width = "120px">
-<h3> ¡Rumbo a la excelencia! </h3>
+<br> 
+
+<center> <p> Página creada por Victor Hugo y Marco Daniel </p>
+
+
+
+<img src = "res/astrocecy.png" height = "110px" width = "120px">
+<h3> ¡Rumbo a la excelencia! </h3> 
+
+
+
+<br> <br> <br>
+<br> <br> <br>
+<br> <br> <br>
+<br> <br> <br>
+<br> <br> <br>
+
+
  </center>
 	
 </div>
-
 
 </html>
