--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 
-<div class = "logofix">
+<!-- <div class = "logofix">
 
 <a href = "https://anothermob.github.io/astrophysics12/"> 
 <img src = "res/mainlogo.png" height = "80px" width = "80px"> </a>
@@ -22,23 +22,34 @@
 
 </div> 
 
-<div class = "menufix" > 
+-->
+
+<input type= "checkbox" id = "menu-toggle">
+<label for = "menu-toggle" class = "toggle-label">  < </label>
 
 <div class = "menu"> 
-    <ul id= "css">
+    <ul id = "css">
 
-<li> <a href = "index.html"> Inicio </a> </li> 
+<li> <a href = "https://anothermob.github.io/astrophysics12/"> Inicio </a> </li> 
+
+<!--
 <li> <a href = "#"> placeholder </a> </li> 
 <li> <a href = "#"> placeholder </a> </li> 
 <li> <a href = "#"> placeholder </a> </li> 
+-->
+
 <li> <a href = "https://sites.google.com/cecyte.edu.mx/ciencia-en-mi-mente/p%C3%A1gina-principal"> Página original </a> </li> 
+
+
+
+
 
 </ul> 
     
 </div>
 
 
- </div> </ul> 
+ </ul> 
 
 <br> <br> <br> <br> <br> <!--Saltos de linea para que el menu fijado no tape la linea blanca hr del titulo -->
 
@@ -47,7 +58,7 @@
 <div class = "bgeffect">
 
 <div class = "title">
-<hr size=10 color ="white">
+<hr size = 10 color ="white">
 
 
 
@@ -102,12 +113,15 @@
 
                           </div>
 
+
                           <div class="reviews-1">
+<a href = "https://drive.google.com/drive/u/5/folders/1ENaX3wRb81om_oPB1hMGciNCPoVLzKvf">
 				<img src="res/dyson.png">
 				<h3> Esfera de Dyson </h3> 
-				<p> Que es una esfera de dyson? es posible recrear algo así? descubrelo en esta presentacion de PowerPoint. <p>
-			</div>
+				<p> Que es una esfera de dyson? es posible recrear algo así? descubrelo en esta presentacion de PowerPoint. </p>
+</a>
 
+			</div>
 
 
 
@@ -162,16 +176,27 @@ PARA ARRIBA DEJANDO LUGAR PARA EL TEXTO DE SUS APORTACIONES QUEDARIA PADRE ESO C
 
 <div class = "footer">
  
-<h2> Siguenos en nuestras redes sociales: </h2>
 
 <div class = "SocialMedia"> 
-<a href = "https://www.facebook.com/profile.php?id=100044057575966&rdid=SJRuYOXMjFwPspqI&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1ASsHtgcJ2%2" </a>
-<img src = "res/fb.png" height = "100px" width = "100px"> </a>
+<center> 
+<h2> Siguenos en nuestras redes sociales: </h2>
 
-<a href="https://www.youtube.com/@aprendiendo3211" </a>
-<img src = "res/yt.png" height = "100px" width = "130px"> </a>
+<h2> Facebook <br> <img src = "res/fb.png" height = "100px" width = "100px"> </a> </h2>
+
+
+<a href =  "https://www.facebook.com/profile.php?id=100044057575966&rdid=SJRuYOXMjFwPspqI&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1ASsHtgcJ2%2"> Programanía </a> 
+
+<a href =  "https://www.facebook.com/profile.php?id=61568065962047"> Programanía Cecyte 12 Morelia </a>
+
+ <br>
+
+<h2> Youtube <br> <img src = "res/yt.png" height = "100px" width = "130px">  </a> </h2>
+<a href="https://www.youtube.com/@aprendiendo3211"> Aprendiendo </a>
+
+</center>
 </div> 
 
+<br> 
  <center> <p> Página creada por Victor Hugo y Marco Daniel </p>
 
 
