--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 <label for = "menu-toggle" class = "toggle-label">  < </label>
 
 <div class = "menu"> 
-    <ul id= "css">
+    <ul id = "css">
 
-<li> <a href = "index.html"> Inicio </a> </li> 
+<li> <a href = "https://anothermob.github.io/astrophysics12/"> Inicio </a> </li> 
+
+<!--
 <li> <a href = "#"> placeholder </a> </li> 
 <li> <a href = "#"> placeholder </a> </li> 
 <li> <a href = "#"> placeholder </a> </li> 
